<html> overflow fix

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -445,6 +445,10 @@ $primary-darker: #357ebd;
 	 Base
 	 ========================================================================== */
 
+html {
+	overflow-x: hidden;
+}
+
 body {
 	width: auto !important;
 	color: $mid-grey;
